test/testdata/functions/not_indexable_assignment_error.lox
fun f() {}
f[0] = 0; // error: 'function' value is not indexable
